generate scribe docs
